--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -42,7 +42,7 @@ general {
     gaps_in = 8
     gaps_out = 16
     border_size = 3
-    col.active_border = rgba(dd00ffee) rgba(dd00ffee) 45deg
+    col.active_border = rgba(dd00ffee) rgba(bb00ffgg) 45deg
     col.inactive_border = rgba(00000000)
 
     layout = dwindle
@@ -122,7 +122,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, W, exec, rofi -show window
+bind = $mainMod, TAB, exec, rofi -show window
 bind = $mainMod, R, exec, rofi -show run
 bind = $mainMod, O, exec, rofi -show power-menu -modi power-menu:./.config/rofi/rofi-power-menu
 bind = $mainMod, F, fullscreen
