--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -39,10 +39,10 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 8
-    gaps_out = 16
-    border_size = 3
-    col.active_border = rgba(dd00ffee) rgba(bb00ffgg) 45deg
+    gaps_in = 12
+    gaps_out = 24
+    border_size = 4
+    col.active_border = rgba(ffffffff) rgba(ffffffff) 45deg
     col.inactive_border = rgba(00000000)
 
     layout = dwindle
@@ -51,7 +51,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 4
+    rounding = 3
     
     blur {
         enabled = true
@@ -60,9 +60,9 @@ decoration {
     }
 
     drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 4
-    col.shadow = rgba(ffffffff)
+    shadow_range = 6
+    shadow_render_power = 8
+    col.shadow = rgba(00000000)
 }
 
 animations {
@@ -70,14 +70,14 @@ animations {
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier = slide, 0.39, 0.575, 0.565, 1
 
-    animation = windows, 1, 8, myBezier
-    animation = windowsOut, 1, 8, default, popin 80%
-    animation = border, 1, 8, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 8, default
-    animation = workspaces, 1, 8, default, slidevert
+    animation = windows, 1, 6, default, slide
+    animation = windowsOut, 1, 6, default, slide
+    animation = border, 1, 6, default
+    animation = borderangle, 1, 6, default
+    animation = fade, 1, 6, default
+    animation = workspaces, 1, 6, default, slidevert
 }
 
 dwindle {
@@ -126,6 +126,7 @@ bind = $mainMod, TAB, exec, rofi -show window
 bind = $mainMod, R, exec, rofi -show run
 bind = $mainMod, O, exec, rofi -show power-menu -modi power-menu:./.config/rofi/rofi-power-menu
 bind = $mainMod, F, fullscreen
+bind = $mainMod, A, exec, xfce4-terminal
 
 
 # Move focus with mainMod + arrow keys
@@ -140,11 +141,7 @@ bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
 bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
@@ -152,11 +149,7 @@ bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
 bind = $mainMod SHIFT, 4, movetoworkspace, 4
 bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -170,6 +163,7 @@ exec-once = waybar
 exec-once = waypaper --restore
 exec-once = blueman-applet
 exec-once = dunst
+
 # volume
 bind = , XF86AudioRaiseVolume, exec, pamixer -i 5
 bind = , XF86AudioLowerVolume, exec, pamixer -d 5
