--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -127,7 +127,8 @@ bind = $mainMod, R, exec, rofi -show run
 bind = $mainMod, O, exec, rofi -show power-menu -modi power-menu:./.config/rofi/rofi-power-menu
 bind = $mainMod, F, fullscreen
 bind = $mainMod, A, exec, xfce4-terminal
-
+bind = $mainMod, N, exec, nemo
+bind = $mainMod, T, exec, thunar
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
