--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -3,9 +3,9 @@ folder = /home/as/Immagini
 fill = Fill
 sort = name
 backend = swaybg
-color = #ffffff
+color = #DEDDDA
 language = en
-subfolders = True
-wallpaper = /home/as/Immagini/alienillustration.jpg
+subfolders = False
+wallpaper = /home/as/Immagini/NotoUfologoThinkpad.png
 monitors = All
 
