--- a/waybar/config
+++ b/waybar/config
@@ -8,16 +8,16 @@
         "hyprland/workspaces"
     ],
     "modules-center": [
-        "clock"
+        
+        "tray"
             ],
     "modules-right": [
-        "tray",
-        "memory",
         "network",
         "pulseaudio",
         "battery",
         "backlight",
         "temperature",
+        "clock",
         "custom/power"
         
     ],
@@ -71,9 +71,9 @@
         "format-disconnected" : "󰖪",
 	"tooltip-format-wifi": "{icon} {essid}\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
         "tooltip-format-ethernet": "󰀂  {ifname}\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
-	"tooltip-format-disconnected": "Disconnected",
+	"tooltip-format-disconnected": "Disconnesso",
 	"on-click": "",
-        "on-click-right": "exec alacritty nmtui",
+        "on-click-right": "exec nmtui",
 	"interval": 5,
 	"nospacing": 1
     },
@@ -111,7 +111,7 @@
                 "󰁹"
             ]
         },
-        "format-full": "Charged ",
+        "format-full": "Carico! ",
         "interval": 5,
         "states": {
             "warning": 20,
@@ -130,7 +130,7 @@
 
 "backlight": {
         
-        "format": "{icon}",
+        "format": "{percent}% {icon}",
         "format-icons": ["", "", "", "", "", "", "", "", ""]
     },
 
