--- a/Thinkpad E490 - Dracula scheme/hypr/hyprland.conf
+++ b/Thinkpad E490 - Dracula scheme/hypr/hyprland.conf
@@ -1,7 +1,5 @@
 
-########################################################################################
-CONFIG REALIZZATA DA ALESSANDRO SPENNATO PER THINKPAD E490
-########################################################################################
+#CONFIG REALIZZATA DA ALESSANDRO SPENNATO PER THINKPAD E490
 
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
@@ -38,18 +36,18 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 6
-    gaps_out = 12
-    border_size = 2
+    gaps_in = 5
+    gaps_out = 10
+    border_size = 1
     col.active_border = rgb(ffffff)
-    col.inactive_border = rgb(585B70)
+    col.inactive_border = rgb(000000)
     layout = dwindle
 }
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 0
+    rounding = 8
 
     
     blur {
@@ -57,10 +55,10 @@ decoration {
         size = 8
         passes = 2
     }
-    drop_shadow = no
-    shadow_range = 8
+    drop_shadow = yes
+    shadow_range = 12
     shadow_render_power = 8
-    col.shadow = rgba(ffffffff)
+    col.shadow = rgb(000000)
 }
 
 animations {
@@ -68,13 +66,13 @@ animations {
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = slidevert, 0.39, 0.575, 0.565, 1
+    bezier = slidevert, 0.60, 0.600, 0.600, 1
 
     animation = windows, 1, 4, default, slide
-    animation = windowsOut, 1, 4, default, slide
+    animation = windowsOut, 1, 8, default, slide
     animation = border, 1, 4, default
     animation = borderangle, 1, 4, default
-    animation = fade, 1, 4, default
+    animation = fade, 1, 8, default
     animation = workspaces, 1, 4, default, slidevert
 }
 
@@ -95,11 +93,6 @@ gestures {
     workspace_swipe_fingers = 3
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
@@ -115,20 +108,17 @@ $mainMod = SUPER
 bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, W, exec, whatsapp-for-linux
-bind = $mainMod, T, exec, telegram 
-bind = $mainMod, E, exec, wofi --show run
-bind = $mainMod, S, exec, wofi --show drun
+bind = $mainMod, T, exec, telegram-desktop
+bind = $mainMod, R, exec, wofi --show run
+bind = $mainMod, D, exec, wofi --show drun
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, D, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, TAB, exec, rofi -show window
-bind = $mainMod, R, exec, rofi -show run
-bind = $mainMod, O, exec, rofi -show power-menu -modi power-menu:./.config/rofi/rofi-power-menu
 bind = $mainMod, F, fullscreen
 bind = $mainMod, A, exec, code
 bind = $mainMod, N, exec, nemo
 bind = $mainMod, C, exec, [float] gnome-calculator
+bind = $mainMod, X, exec, [float] chat-gpt
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -167,10 +157,9 @@ bindm = $mainMod, mouse:273, resizewindow
 exec-once = waybar
 exec-once = waypaper --restore
 exec-once = blueman-applet
-exec-once = dunst
 exec-once = noip2
 exec-once = nm-applet
-exec-once = wob
+exec-once = insync
 exec-once = udiskie &
 
 # volume
@@ -192,10 +181,10 @@ bind = , PRINT, exec, hyprshot -m output
 bind = $shiftMod, PRINT, exec, hyprshot -m region
 
 # Lock screen
-bind = $mainMod, L , exec, swaylock --clock --indicator --effect-scale 1 --effect-vignette 0.2:1 --effect-blur 4x2 --datestr "%a %e.%m.%Y" --timestr "%k:%M"
-exec swayidle -w \
-	before-sleep 'loginctl lock-session $XDG_SESSION_ID' \
-	lock 'playerctl -a pause && swaylock'
+#bind = $mainMod, L , exec, swaylock --clock --indicator --effect-scale 1 --effect-vignette 0.2:1 --effect-blur 4x2 --datestr "%a %e.%m.%Y" --timestr "%k:%M"
+#exec swayidle -w \
+#	before-sleep 'loginctl lock-session $XDG_SESSION_ID' \
+#	lock 'playerctl -a pause && swaylock'
 
 # Windows Rule
 windowrule = float,^(nemo)$
